Trabajar en instalaciones

--- a/src/app/components/instalaciones/instalaciones.component.html
+++ b/src/app/components/instalaciones/instalaciones.component.html
@@ -3,56 +3,36 @@
 <br>
 
 
-<div class="container img-fluid">
-<div class="carousel">
-    <div id="carouselExampleSlidesOnly" class="carousel slide pointer-event" data-bs-ride="carousel">
-      <div class="carousel-inner">
-  
-        <div class="carousel-item data-bs-interval=2000 ">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="400" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: First slide" preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title></title>
-            <image xlink:href="assets\img\centro\entrada_.png" width="100%" height="100%" />
-          </svg>
-      </div>
-  
-        <div class="carousel-item data-bs-interval=2000">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="400" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: First slide" preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title></title>
-            <image xlink:href="assets\img\centro\salaGris.png" width="100%" height="100%" />
-          </svg>
-        </div>
-  
-        <div class="carousel-item active data-bs-interval=2000">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="400" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: First slide" preserveAspectRatio="xMidYMid slice" focusable="false">
-            <title>NUTRICIÓN</title>
-            <image xlink:href="assets\img\centro\salaTrineo1.jpg" width="100%" height="100%" />
-          </svg>
-        </div>
-  
-        <div class="carousel-item data-bs-interval=2000">
-            <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="400" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: First slide" preserveAspectRatio="xMidYMid slice" focusable="false">
-              <title>ENTRENAMIENTOS GRUPALES</title>
-              <image xlink:href="assets\img\centro\hipThruster.png" width="100%" height="100%" />
-            </svg>
-          </div>
-          
-          <div class="carousel-item data-bs-interval=2000">
-              <svg class="bd-placeholder-img bd-placeholder-img-lg d-block w-100" width="400" height="400" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: First slide" preserveAspectRatio="xMidYMid slice" focusable="false">
-                <title>ACCESO POR LIBRE</title>
-                <image xlink:href="assets\img\servicios\pesosLibres1.png" width="100%" height="100%" />
-              </svg>
-          </div>
-  
-       </div>
+
+<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active" data-bs-interval="2000">
+      <img src="assets\img\centro\entrada_.png"  class="mx-auto" alt="...">
+    </div>
+    <!-- <div class="carousel-item" data-bs-interval="2000">
+      <img src="..." class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="..." class="d-block w-100" alt="...">
     </div>
   </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button> -->
 </div>
 
-  <div class="container img-fluid">
 
-    
-   
-    
-
+<!-- prueba card con carousel  -->
+<div class="card text-bg-dark">
+  <img src="..." class="card-img" alt="...">
+  <div class="card-img-overlay">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <p class="card-text"><small>Last updated 3 mins ago</small></p>
   </div>
-  
+</div>
