Se ha empezado a linkear los servicios

--- a/src/app/components/servicio/servicio.component.html
+++ b/src/app/components/servicio/servicio.component.html
@@ -1,1 +1,8 @@
-<p>servicio works!</p>
+<div class="container" style="margin-top: 900px;">
+    <div class="row">
+        <div class="col-12">
+            <h2>{{serviciosGYM.servicios.}}</h2>
+        </div>
+    </div>
+</div>
+<p>hfbyrivhnosklmv,proèrpojgoiwej</p>
