--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -46,6 +46,11 @@
   </div>
 </section>
 
+<!-- GOOGLE MAPS IFRAME -->
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2590.26789496429!2d-0.38468046675165113!3d39.46108192977194!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd604ff5385de799%3A0x563d5def7577dc!2sMarv%C3%A1%20Sport%20Center!5e0!3m2!1ses!2ses!4v1715264849634!5m2!1ses!2ses"
+width="100%" height="450" style="border: 0px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
 <!-- ICONO WHATSAPP FIJO -->
 
 <a href="https://api.whatsapp.com/send/?phone=34673027522&text&type=phone_number&app_absent=0" target="blank">
