--- a/src/app/components/servicios/servicios.component.html
+++ b/src/app/components/servicios/servicios.component.html
@@ -67,6 +67,9 @@
       </div>
     </div>
   </div>
+  <br>
+  <br>
+  <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px;">Mas detalles</a>
 </div>
 
 
