Mejorar carousel en home e instalaciones

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,21 +1,29 @@
 
-<div class="OfertaEspecial">
-  <h1>OFERTA ESPECIAL</h1>
-  <br>
-  <p>Date de alta con un familiar –  amig&#64; – vecin&#64; y obtienes</p>
-  <br>
-  <p class="Mensualidad">1 PERSONA OBTIENE 50% DTO EN MENSUALIDAD DURANTE 3 MESES</p>
-  <br>
-  <div class="CaracteristicasOferta">
-    <p>Clase gratuita</p>
-    <p>Medición Inbody</p>
-    <p>Valoración de Fisioterapia</p>
-    <p>Sin matrícula</p>
+
+
+<div class="container-fluid">
+
+  <div class="OfertaEspecial">
+    <h1>OFERTA DEL MES</h1>
+    <br>
+    <p>Date de alta con un familiar –  amig&#64; – vecin&#64;</p>
+    <br>
+    <h2 class="Mensualidad">OBTÉN 20% DESCUENTO DURANTE 3 MESES CADA UNO</h2>
+    <br>
+    <div class="CaracteristicasOferta">
+      <p>Clase gratuita</p>
+      <p>Medición Inbody</p>
+      <p>Valoración de Fisioterapia</p>
+      <p>Sin matrícula</p>
+    </div>
+    <br>
+    <p>Has click en "Conseguir Oferta" <br></p>
+    <br>
+    <a href="#" routerLink="/formulario" routerLinkActive="active" type="button" class="btn btn-light btn-lg" style="border-radius: 0px!important;" (click)="scrollToTop()"><strong>CONSEGUIR OFERTA</strong></a>
+    <br>
+    <span>*Aplica Condiciones</span>
   </div>
-  <br>
-  <p>Rellena el formulario y en comentario «Oferta Especial»</p>
-  <br>
-  <a href="#" routerLink="/formulario" routerLinkActive="active" type="button" class="btn btn-light btn-lg" style="border-radius: 0px!important;" (click)="scrollToTop()"><strong>CONSEGUIR OFERTA</strong></a>
+
 </div>
 
 <section class="DatosContacto">
