--- a/src/app/components/servicio/servicio.component.html
+++ b/src/app/components/servicio/servicio.component.html
@@ -2,9 +2,9 @@
 <br>
 <br>
 <br>
-<div style="margin-top: 20px; margin-left: 560px;">
+<!-- <div style="margin-top: 20px; margin-left: 560px;">
     <h1>{{serviciosGYM.nombre}}</h1>
-</div>
+</div> -->
 <br>
 <br>
 <div style="margin-left: 600px;">
@@ -25,3 +25,7 @@
         <br>
     }
 </div>
+
+
+<!-- prueba  -->
+
