--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,7 +1,7 @@
 /* Css Datos Contacto */
 
 .OfertaEspecial {
-    background-color: black;
+    background-color: rgb(67, 68, 73);
     text-align: center;
     color: white;
     padding: 5em;
