--- a/src/app/components/instalaciones/instalaciones.component.html
+++ b/src/app/components/instalaciones/instalaciones.component.html
@@ -3,38 +3,71 @@
 <br>
 
 
+<div class="container py-4">
+      
+  <!-- se le da un ID AL CAROUSEL >>llamarlo en  JavaScript clase carousel  data-bs-slide="carousel"-->
+  <div id="slider-serviciosHome" class="carousel slide" data-bs-ride="carousel"> 
 
-<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-bs-interval="2000">
-      <img src="assets\img\centro\entrada_.png"  class="mx-auto" alt="...">
+    <div class="carousel-indicators">
+      <button class="active" data-bs-target="#slider-serviciosHome" data-bs-slide-to="0"></button>
+      <button data-bs-target="#slider-serviciosHome" data-bs-slide-to="1"></button>
+      <button data-bs-target="#slider-serviciosHome" data-bs-slide-to="2"></button>
+      <button data-bs-target="#slider-serviciosHome" data-bs-slide-to="3"></button>
     </div>
 
-    
-    <!-- <div class="carousel-item" data-bs-interval="2000">
-      <img src="..." class="d-block w-100" alt="...">
+      <!-- EMPIEZA CAROUSEL -- efecto al> carousel-fade -->
+    <div class="carousel-inner carousel-fade">
+
+      <!-- -active primera imagen del carousel por dfecto y velocidad del carousel -->
+      <div class="carousel-item active" data-bs-interval="3000" >
+        <img class="d-block w-100" src="assets\img\centro\entrada_.png" alt="Fisioterapia">
+         <!-- titulo- texto imagen  --ojo claseb indica que según tamaño pantalla texto aparace o no  -->
+          <div class="carousel-caption d-none d-md-block">
+            <h1></h1>
+            <p></p>
+          </div>
+      </div>
+
+      <div class="carousel-item" data-bs-interval="3000">
+        <img class="d-block w-100"  src="assets\img\centro\pista.png" alt="pista">
+        <div class="carousel-caption d-none d-md-block">
+          <h1></h1>
+          <p> </p>
+        </div>
+      </div>
+
+      <div class="carousel-item" data-bs-interval="3000">
+        <img class="d-block w-100" src="assets\img\centro\salaGris.png" alt="nutricion">
+        <div class="carousel-caption d-none d-md-block">
+          <h1></h1>
+          <p></p>
+        </div>
+      </div>
+
+      <div class="carousel-item" data-bs-interval="3000">
+        <img class="d-block w-100" src="assets\img\servicios\pesosLibres1.png" alt="nutricion">
+        <div class="carousel-caption d-none d-md-block">
+          <h1 ></h1>
+          <p> </p>
+        </div>
+      </div>
+
+      
+
+
     </div>
-    <div class="carousel-item">
-      <img src="..." class="d-block w-100" alt="...">
-    </div>
+
+      <!--CONTROLES CAROUSEL POR USUARIO -->
+    <button class="carousel-control-prev" type="button" data-bs-target="#slider-serviciosHome" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      
+    </button>
+
+    <button class="carousel-control-next" type="button" data-bs-target="#slider-serviciosHome" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+    </button>
+
+
   </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button> -->
-</div>
 
-
-<!-- prueba card con carousel  -->
-<div class="card text-bg-dark">
-  <img src="..." class="card-img" alt="...">
-  <div class="card-img-overlay">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    <p class="card-text"><small>Last updated 3 mins ago</small></p>
-  </div>
 </div>
