--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -65,20 +65,43 @@
   </div>
 </section>
 
-<!-- CARROUSEL SERVICIOS class="d-block w-50"  class=" img-fluid" -->
+<!-- QUIENES SOMOS  -->
+
+
+
+ <div class="px-4 py-5 my-2 text-center">
+
+  <h1 class="display-5 fw-bold"> Transforma tu salud y rendimiento con nuestros servicios.</h1>
+  
+  <div class="col-lg-6 mx-auto">
+    <p class="lead mb-4">SERVICIO DE FISIOTERAPIA DEPORTIVA, ENTRENAMIENTO PERSONAL Y NUTRICIÓN <br> <br>
+      En <strong>Marva Sport Center </strong> hemos puesto toda nuestra experiencia y recursos en el diseño de instalaciones y programas de rehabilitación y acondicionamiento físico, bajo la supervisión de profesionales cualificados. 
+      <br>Vamos a acompañarte desde el primer minuto, a que logres tus objetivos de bienestar o estilo de vida más salaudable y lleno de vitalidad.  </p>
+
+       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-2">
+        <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">
+          <a routerLink="/servicios" (click)="scrollToTop()"> <strong>SERVICIOS  DESTACADOS</strong></a>
+        </button>
+       </div>
+
+  </div>
+</div>
 
 
 
 
- <br>
+ <!-- <div class="container-md">
+  <div class="container-fluid juatify-content">
 
- <div class="bg-opacity-80 bg-secondary text-white">
-  <div class="d-flex justify-content-center">
-  <h2> Servicios Destacados</h2>
+  <h2 > Servicios Destacados</h2>
+  <p>SERVICIOS DE MEDICINA DEPORTIVA Y ENTRENAMIENTO PERSONAL
+    En Marva Sport Center hemos puesto toda nuestra experiencia y recursos en el diseño de instalaciones y programas de rehabilitación y entrenamiento personal, que se desarrollan de manera guiada y progresiva bajo la supervisión de profesionales cualificados. 
+    Vamos a acompañarte desde el primer minuto, porque sabemos que un porcentaje muy alto de usuarios,
+     pacientes y deportistas, abandona su objetivo a medio/ largo plazo por la ausencia de obtención de resultados </p>
 
   
 </div>
- </div>
+ </div> -->
 
 <!-- Carousel -->
 
@@ -100,9 +123,9 @@
           <!-- -active primera imagen del carousel por dfecto y velocidad del carousel -->
           <div class="carousel-item active" data-bs-interval="3000" >
             <img class="d-block w-100" src="assets\img\servicios\fisio2.png" alt="Fisioterapia">
-             <!-- titulo- texto imagen  --ojo claseb indica que según tamaño pantalla texto aparace o no  -->
+             <!-- titulo- texto imagen  --ojo clase d-none>> indica que según tamaño pantalla texto aparace o no  -->
               <div class="carousel-caption d-none d-md-block">
-                <h1>FISIOTERAPIA</h1>
+                <h1 >FISIOTERAPIA</h1>
                 <p>Recupera tu bienestar, y movilidad, profesionales de rehabilitación física</p>
               </div>
           </div>
