--- a/src/app/components/instalaciones/instalaciones.component.html
+++ b/src/app/components/instalaciones/instalaciones.component.html
@@ -2,72 +2,96 @@
 <br>
 <br>
 
+<div class="px-4 py-5 my-4 text-center">
 
-<div class="container py-4">
-      
-  <!-- se le da un ID AL CAROUSEL >>llamarlo en  JavaScript clase carousel  data-bs-slide="carousel"-->
-  <div id="slider-serviciosHome" class="carousel slide" data-bs-ride="carousel"> 
+  <h1 class="display-5 fw-bold">  NUESTRAS INSTALACIONES</h1>
+  
+  <div class="col-lg-6 mx-auto">
+    <p class="display-6 mb-4">Ven a conocernos!! Pide ahora clase gratuita <br> <br>
+      <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">
+        <a routerLink="/formulario"> PIDE TU PRUEBA AQUÍ</a>
+      </button>
 
-    <div class="carousel-indicators">
-      <button class="active" data-bs-target="#slider-serviciosHome" data-bs-slide-to="0"></button>
-      <button data-bs-target="#slider-serviciosHome" data-bs-slide-to="1"></button>
-      <button data-bs-target="#slider-serviciosHome" data-bs-slide-to="2"></button>
-      <button data-bs-target="#slider-serviciosHome" data-bs-slide-to="3"></button>
-    </div>
-
-      <!-- EMPIEZA CAROUSEL -- efecto al> carousel-fade -->
-    <div class="carousel-inner carousel-fade">
-
-      <!-- -active primera imagen del carousel por dfecto y velocidad del carousel -->
-      <div class="carousel-item active" data-bs-interval="3000" >
-        <img class="d-block w-100" src="assets\img\centro\entrada_.png" alt="Fisioterapia">
-         <!-- titulo- texto imagen  --ojo claseb indica que según tamaño pantalla texto aparace o no  -->
-          <div class="carousel-caption d-none d-md-block">
-            <h1></h1>
-            <p></p>
-          </div>
-      </div>
-
-      <div class="carousel-item" data-bs-interval="3000">
-        <img class="d-block w-100"  src="assets\img\centro\pista.png" alt="pista">
-        <div class="carousel-caption d-none d-md-block">
-          <h1></h1>
-          <p> </p>
-        </div>
-      </div>
-
-      <div class="carousel-item" data-bs-interval="3000">
-        <img class="d-block w-100" src="assets\img\centro\salaGris.png" alt="nutricion">
-        <div class="carousel-caption d-none d-md-block">
-          <h1></h1>
-          <p></p>
-        </div>
-      </div>
-
-      <div class="carousel-item" data-bs-interval="3000">
-        <img class="d-block w-100" src="assets\img\servicios\pesosLibres1.png" alt="nutricion">
-        <div class="carousel-caption d-none d-md-block">
-          <h1 ></h1>
-          <p> </p>
-        </div>
-      </div>
-
+      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-2">
+        <!-- <h3>
+          En <strong>Marva Sport Center </strong> hemos puesto toda nuestra experiencia  en ofrecer   </h3> -->
+       
       
 
-
-    </div>
-
-      <!--CONTROLES CAROUSEL POR USUARIO -->
-    <button class="carousel-control-prev" type="button" data-bs-target="#slider-serviciosHome" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      
-    </button>
-
-    <button class="carousel-control-next" type="button" data-bs-target="#slider-serviciosHome" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
-    </button>
-
+    </div> 
+    
 
   </div>
-
 </div>
+
+
+
+<section>
+    <div class="container py-4">
+          
+      <!-- se le da un ID AL CAROUSEL >>llamarlo en  JavaScript clase carousel  data-bs-slide="carousel"-->
+      <div id="slider-serviciosHome" class="carousel slide" data-bs-ride="carousel"> 
+
+        <div class="carousel-indicators">
+          <button class="active" data-bs-target="#slider-serviciosHome" data-bs-slide-to="0"></button>
+          <button data-bs-target="#slider-serviciosHome" data-bs-slide-to="1"></button>
+          <button data-bs-target="#slider-serviciosHome" data-bs-slide-to="2"></button>
+          <button data-bs-target="#slider-serviciosHome" data-bs-slide-to="3"></button>
+        </div>
+
+          <!-- EMPIEZA CAROUSEL -- efecto al> carousel-fade -->
+        <div class="carousel-inner carousel-fade">
+
+          <!-- -active primera imagen del carousel por dfecto y velocidad del carousel -->
+          <div class="carousel-item active" data-bs-interval="3000" >
+            <img class="d-block w-100" src="assets\img\centro\entrada_.png" alt="Fisioterapia">
+            <!-- titulo- texto imagen  --ojo claseb indica que según tamaño pantalla texto aparace o no  -->
+              <div class="carousel-caption d-none d-md-block">
+                <h1></h1>
+                <p></p>
+              </div>
+          </div>
+
+          <div class="carousel-item" data-bs-interval="3000">
+            <img class="d-block w-100"  src="assets\img\centro\pista.png" alt="pista">
+              <div class="carousel-caption d-none d-md-block">
+                <h1></h1>
+                <p> </p>
+              </div>
+          </div>
+
+          <div class="carousel-item" data-bs-interval="3000">
+            <img class="d-block w-100" src="assets\img\centro\salaGris.png" alt="nutricion">
+              <div class="carousel-caption d-none d-md-block">
+                <h1></h1>
+                <p></p>
+              </div>
+          </div>
+
+          <div class="carousel-item" data-bs-interval="3000">
+            <img class="d-block w-100" src="assets\img\servicios\pesosLibres1.png" alt="nutricion">
+              <div class="carousel-caption d-none d-md-block">
+                <h1 ></h1>
+                <p> </p>
+              </div>
+          </div>
+
+          
+
+
+        </div>
+
+          <!--CONTROLES CAROUSEL POR USUARIO -->
+        <button class="carousel-control-prev" type="button" data-bs-target="#slider-serviciosHome" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </button>
+
+        <button class="carousel-control-next" type="button" data-bs-target="#slider-serviciosHome" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </button>
+
+
+      </div>
+
+    </div>
+  </section>
