--- a/src/app/components/servicios/servicios.component.html
+++ b/src/app/components/servicios/servicios.component.html
@@ -12,7 +12,7 @@
       <img src="assets\img\servicios\ePersonal3.png" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text">Alcanza tus metas con un enfoque personalizado: Entrenamiento personal para maximizar tu potencial y transformar tu cuerpo."</p>
-        <!-- <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 440px;">Ver mas</a> -->
+        <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 440px;">Ver mas</a>
       </div>
     </div>
   </div>
@@ -25,7 +25,7 @@
       <div class="card-body">
         <h5 class="card-title">MIT</h5>
         <p class="card-text">Entrenamiento de intervalos de alta intensidad, combina tiempo de trabajo y tiempo de descanso.</p>
-        <!-- <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px;">Ver mas</a> -->
+        <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px;">Ver mas</a>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
@@ -33,7 +33,7 @@
       <div class="card-body">
         <h5 class="card-title">TRAINING</h5>
         <p class="card-text">Entrenamiento en grupos reducidos que combina trabajo de fuerza, movilidad y cardiovascular .</p>
-        <!-- <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px;">Ver mas</a> -->
+        <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px;">Ver mas</a>
       </div>
     </div>
   </div>
@@ -47,7 +47,7 @@
       <div class="card-body">
         <h5 class="card-title">FISIOTERAPIA</h5>
         <p class="card-text">Recupera tu bienestar: Servicios de Fisioterapia dedicados a tu salud y vitalidad</p>
-        <!-- <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px;">Ver mas</a> -->
+        <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px;">Ver mas</a>
       </div>
     </div>
     <div class="card" style="width: 18rem; margin-right: 200px;">
@@ -55,7 +55,7 @@
       <div class="card-body">
         <h5 class="card-title">NUTRICIONISTA</h5>
         <p class="card-text">Alimentar tu bienestar y potenciar tu salud desde adentro hacia afuera</p>
-        <!-- <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px;">Ver mas</a> -->
+        <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px;">Ver mas</a>
       </div>
     </div>
     <div class="card" style="width: 18rem;">
@@ -63,13 +63,13 @@
       <div class="card-body">
         <h5 class="card-title">ENTRENAMIENTO LIBRE</h5>
         <p class="card-text">Cuenta con todas nuestras máquinas y demas equipo para realizar tus actividades</p>
-        <!-- <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px;">Ver mas</a> -->
+        <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px;">Ver mas</a>
       </div>
     </div>
   </div>
   <br>
-  <br>
-  <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 600px;">Mas detalles</a>
+  <!-- <br>
+  <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 600px;">Mas detalles</a> -->
 </div>
 
 
