--- a/src/app/components/instalaciones/instalaciones.component.html
+++ b/src/app/components/instalaciones/instalaciones.component.html
@@ -5,23 +5,16 @@
 <div class="px-4 py-5 my-4 text-center">
 
   <h1 class="display-5 fw-bold">  NUESTRAS INSTALACIONES</h1>
-  
-  <div class="col-lg-6 mx-auto">
-    <p class="display-6 mb-4">Ven a conocernos!! Pide ahora clase gratuita <br> <br>
+  <!-- <div class="col-lg-6 mx-auto">
+    <p class="display-6 mb-4">Ven a conocernos!! Pide ahora clase gratuita </p>
       <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">
         <a routerLink="/formulario"> PIDE TU PRUEBA AQUÍ</a>
       </button>
-
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-2">
-        <!-- <h3>
+       <h3>
           En <strong>Marva Sport Center </strong> hemos puesto toda nuestra experiencia  en ofrecer   </h3> -->
-       
-      
-
-    </div> 
-    
-
-  </div>
+    <!-- </div> 
+  </div> --> 
 </div>
 
 
@@ -95,3 +88,20 @@
 
     </div>
   </section>
+
+
+  <div class="px-4 py-5 my-4 text-center">
+
+    <h1 class="display-5 fw-bold">  NUESTRAS INSTALACIONES</h1>
+    <!-- <div class="col-lg-6 mx-auto">
+      <p class="display-6 mb-4">Ven a conocernos!! Pide ahora clase gratuita </p>
+        <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">
+          <a routerLink="/formulario"> PIDE TU PRUEBA AQUÍ</a>
+        </button>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-2">
+         <h3>
+            En <strong>Marva Sport Center </strong> hemos puesto toda nuestra experiencia  en ofrecer   </h3> -->
+      <!-- </div> 
+    </div> --> 
+  </div>
+  
