añadir margin, mover QR

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -175,7 +175,7 @@
         <div class="container">
 
           <div class="row">
-            <div class="col">
+            <div class="col m-4">
               <h1 class="display-5 fw-bold text-center">Nuestras instalaciones</h1>
             </div>
           </div>
@@ -196,7 +196,17 @@
          <div class="col md-4">
           <img src="assets\img\centro\maquinas.png" alt="Foto 2" class="img-fluid">
        </div>
+      
+
+
       </div>
+
+      <div class="container px-4 m4">
+        <p class="lead mb-4" style="margin-top:2rem; margin-bottom: 2rem;">ESCANEA EL QR PARA CONOCERNOS </p>
+         <img src="assets\img\QR Marva Sport Center Fachada.jpg"width="100" height="100"> 
+      </div>
+
+
     </div>
       
       
