--- a/src/app/components/servicios/servicios.component.html
+++ b/src/app/components/servicios/servicios.component.html
@@ -12,15 +12,7 @@
       <img src="assets\img\servicios\ePersonal3.png" class="card-img-top" alt="...">
       <div class="card-body">
         <p class="card-text">Alcanza tus metas con un enfoque personalizado: Entrenamiento personal para maximizar tu potencial y transformar tu cuerpo."</p>
-<<<<<<< HEAD
         <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 440px;">Ver mas</a>
-=======
-
-        <a href="" class="btn btn-primary" type="button" style="">Ver mas</a>
-
-        <!-- <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 440px;">Ver mas</a> -->
-
->>>>>>> 79095746a7ebbaca936ecf4d997dc2800652ba11
       </div>
     </div>
   </div>
@@ -50,50 +42,28 @@
   <h3 style="text-align: center;">SERVICIOS ADICIONALES</h3>
   <br>
   <div style="display: flex; justify-content: center; background: linear-gradient(rgba(55, 55, 67, 0.748), rgb(0, 115, 255)); border-radius: 2%; padding: 15px;">
-    <div class="card" style="width: 24rem; margin-right: 100px;">
-      <img src="assets\img\servicios\fisio.png" class="card-img-top" alt="..." style="height: 300px;" >
+    <div class="card" style="width: 18rem; margin-right: 200px;">
+      <img src="assets\img\servicios\fisio.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">FISIOTERAPIA</h5>
         <p class="card-text">Recupera tu bienestar: Servicios de Fisioterapia dedicados a tu salud y vitalidad</p>
-<<<<<<< HEAD
         <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px;">Ver mas</a>
-=======
-
-        <a href="" class="btn btn-primary" type="button" style="">Ver mas</a>
-
-        <!-- <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px;">Ver mas</a> -->
-
->>>>>>> 79095746a7ebbaca936ecf4d997dc2800652ba11
       </div>
     </div>
-    <div class="card" style="width: 24rem; margin-right: 100px;">
-      <img src="assets\img\servicios\nutri1.png" class="card-img-top" alt="..." style="height: 300px;">
+    <div class="card" style="width: 18rem; margin-right: 200px;">
+      <img src="assets\img\servicios\nutri1.png" class="card-img-top" alt="..." style="height: 445px;">
       <div class="card-body">
         <h5 class="card-title">NUTRICIONISTA</h5>
         <p class="card-text">Alimentar tu bienestar y potenciar tu salud desde adentro hacia afuera</p>
-<<<<<<< HEAD
         <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px;">Ver mas</a>
-=======
-
-        <a href="" class="btn btn-primary" type="button" style="">Ver mas</a>
-        <!-- <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px;">Ver mas</a> -->
->>>>>>> 79095746a7ebbaca936ecf4d997dc2800652ba11
       </div>
     </div>
-    <div class="card" style="width: 24rem;">
-      <img src="assets\img\servicios\pesosLibres.png" class="card-img-top" alt="..." style="height: 300px;">
+    <div class="card" style="width: 18rem;">
+      <img src="assets\img\servicios\pesosLibres.png" class="card-img-top" alt="..." style="height: 450px;">
       <div class="card-body">
         <h5 class="card-title">ENTRENAMIENTO LIBRE</h5>
         <p class="card-text">Cuenta con todas nuestras máquinas y demas equipo para realizar tus actividades</p>
-<<<<<<< HEAD
         <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px;">Ver mas</a>
-=======
-
-        <a href="" class="btn btn-primary" type="button" style="">Ver mas</a>
-
-        <!-- <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 170px;">Ver mas</a> -->
-
->>>>>>> 79095746a7ebbaca936ecf4d997dc2800652ba11
       </div>
     </div>
   </div>
@@ -101,8 +71,5 @@
   <!-- <br>
   <a routerLink="/servicio" class="btn btn-primary" type="button" style="margin-left: 600px;">Mas detalles</a> -->
 </div>
-
-
-
 
 
