(David) Añadir componente Api y  ruta

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -29,10 +29,10 @@
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#" routerLink="/formulario" routerLinkActive="active" (click)="scrollToTop()">CONTACTO</a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">VEN A PROBAR!! </a>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#" routerLink="/api" routerLinkActive="active" (click)="scrollToTop()">API</a>
         </li>
- -->
+ 
 
       </ul>
 
